RESOLVED FIXED189411
[Web Animations] Positive delays of accelerated animations are not respected
https://bugs.webkit.org/show_bug.cgi?id=189411
Summary [Web Animations] Positive delays of accelerated animations are not respected
Antoine Quint
Reported 2018-09-07 09:47:45 PDT
Created attachment 349153 [details] Test See the attached test case, an animation with a delay does not respect it if it's accelerated: document.body.appendChild(document.createElement("div")).animate({ transform: ["translateX(100px)", "none"] }, { duration: 1000, delay: 1000 });
Attachments
Test (461 bytes, text/html)
2018-09-07 09:47 PDT, Antoine Quint
no flags
Patch (5.66 KB, patch)
2018-09-10 03:13 PDT, Antoine Quint
no flags
Patch (3.44 KB, patch)
2018-09-17 02:22 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2018-09-07 09:48:00 PDT
Antoine Quint
Comment 2 2018-09-10 03:13:28 PDT
Antoine Quint
Comment 3 2018-09-10 12:05:38 PDT
Antoine Quint
Comment 5 2018-09-17 02:22:12 PDT
Reopening to attach new patch.
Antoine Quint
Comment 6 2018-09-17 02:22:14 PDT
Antoine Quint
Comment 7 2018-09-17 10:37:56 PDT
Note You need to log in before you can comment on or make changes to this bug.